--- a/installer/install
+++ b/installer/install
@@ -13,4 +13,4 @@ cd "${BASEDIR}"
 git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
 git submodule update --init --recursive "${DOTBOT_DIR}"
 
-"${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${REPO_ROOT_DIR}" -c "${CONFIG}" "${@}"
+"${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${REPO_ROOT_DIR}" --plugin-dir dotbot-asdf -c "${CONFIG}" "${@}"
