--- a/smart-plug/install
+++ b/smart-plug/install
@@ -1,5 +1,14 @@
 #!/bin/bash
 
+echo "Are you sure want to install the smart-plug service? (y/n): "
+read response
+if [ "$response" = "n" ]; then
+    exit
+elif [ "$response" != "y" ] # invalid input
+  then
+    exit
+fi
+
 # Copy the source folder, excluding the .venv since the virtual environment will be recreated in the target directory
 sudo rsync -arhP --exclude='.venv' smart-plug-daemon.d /opt/
 cd /opt/smart-plug-daemon.d
