(smart-plug) fix: add a script to delay the network manager's disconnection by a second
This workaround should give my service enough time to turn off the smart plug.

--- a/smart-plug/install
+++ b/smart-plug/install
@@ -11,6 +11,7 @@ mkdir .venv
 pipenv sync
 cd -
 
+sudo install --compare --backup --suffix=.bak --owner=root --group=root --mode='u=rwx,g=r,o=r' -D --verbose --no-target-directory ~/.dotfiles/smart-plug/wait-one-second /etc/NetworkManager/dispatcher.d/pre-down.d/wait-one-second
 sudo cp ~/.dotfiles/smart-plug/smart-plug-daemon.service /etc/systemd/system/
 sudo systemctl enable smart-plug-daemon.service
 sudo systemctl start smart-plug-daemon.service
