Make it modular
Now you can install the dotfiles for a set of modules, referred to as a profile (e.g. headless server).
I used this guide to do it: https://github.com/anishathalye/dotbot/wiki/Tips-and-Tricks#more-advanced-setup

--- a/languagetool/install
+++ b/languagetool/install
@@ -1,5 +1,5 @@
 #!/bin/bash
 
-sudo cp ./languagetool.service /etc/systemd/system/
+sudo install --compare --backup --suffix=.bak --owner=root --group=root --mode='u=rw,g=r,o=r' -D --verbose --no-target-directory ./languagetool/languagetool.service /etc/systemd/system/languagetool.service
 sudo systemctl enable languagetool.service
 sudo systemctl start languagetool.service
