--- a/smart-plug/install
+++ b/smart-plug/install
@@ -3,10 +3,15 @@
 # exit the script if any command returns a non-zero exit code
 set -e
 
+if [ -d /opt/smart-plug-daemon.d ]; then
+  echo 'smart-plug is already installed, exiting.'
+  exit
+fi
+
 # Copy the source folder, excluding the .venv since the virtual environment will be recreated in the target directory
 sudo rsync -arhP ~/.dotfiles/smart-plug/smart-plug-daemon.d /opt/
 
 sudo install --compare --backup --suffix=.bak --owner=root --group=root --mode='u=rwx,g=r,o=r' -D --verbose --no-target-directory ~/.dotfiles/smart-plug/wait-one-second /etc/NetworkManager/dispatcher.d/pre-down.d/wait-one-second
-sudo cp ~/.dotfiles/smart-plug/smart-plug-daemon.service /etc/systemd/system/
+sudo install --compare --backup --suffix=.bak --owner=root --group=root --mode='u=rwx,g=r,o=r' -D --verbose --no-target-directory ~/.dotfiles/smart-plug/smart-plug-daemon.service /etc/systemd/system/smart-plug-daemon.service
 sudo systemctl enable smart-plug-daemon.service
 sudo systemctl start smart-plug-daemon.service
